<resources>
    <string name="account_avatar_load_fail">Failed to load avatar. Please try again.</string>
    <string name="account_avatar_modify">Change Avatar</string>
    <string name="account_avatar_modify_fail">Your avatar hasn\'t been changed. Please try again</string>
    <string name="account_avatar_modify_success">Your avatar has been changed!</string>
    <string name="account_avatar_save_fail">Failed to save. Please try again.</string>
    <string name="account_avatar_save_success">Save to album</string>
    <string name="account_avatar_view">View Avatar</string>
    <string name="account_create">Registration</string>
    <string name="account_delete">Delete Account</string>
    <string name="account_delete_confirm_text">Delete</string>
    <string name="account_delete_desc">Just a heads-up that your account information, project files, and personal data will be permanently cleared once the account is deleted. If you really want to continue with this process, please enter your password.</string>
    <string name="account_delete_fail">Your account hasn\'t been deleted. Please try later</string>
    <string name="account_delete_success">Your account has been deleted</string>
    <string name="account_error_account">Wrong account!</string>
    <string name="account_error_account_captcha_over_count_24">You can only send ten messages per day to the same account. Please wait and try again.</string>
    <string name="account_error_email_captcha_over_count">You can only send one email per minute to the same account. Please wait and try again.</string>
    <string name="account_error_invalid_account_emoji">Account must not contain an emotion icon</string>
    <string name="account_error_invalid_email_format">The email address is incorrect</string>
    <string name="account_error_invalid_phone_format">The phone number is incorrect</string>
    <string name="account_error_password">Wrong password.</string>
    <string name="account_error_pcaptcha_overdue">Verification code has expired.</string>
    <string name="account_gdpr_and"> and </string>
    <string name="account_gdpr_see">Read </string>
    <string name="account_login_email">Email</string>
    <string name="account_login_fail_case_password_invalid">Your user name or password is incorrect, please try again</string>
    <string name="account_login_fail_case_try_again">Login failed, please try again</string>
    <string name="account_login_forgot_password">Forgot password?</string>
    <string name="account_login_guest">Log in as guest</string>
    <string name="account_login_hint_input_account">Email or phone number</string>
    <string name="account_login_hint_input_account_email">Email address</string>
    <string name="account_login_hint_input_account_phone">Mobile number</string>
    <string name="account_login_hint_input_password">Password</string>
    <string name="account_login_overdue_desc">Your account has expired and your project files have been saved locally. Please log back in to your account or switch to guest account.</string>
    <string name="account_login_overdue_guest">Switch to guest</string>
    <string name="account_login_overdue_login">Log in</string>
    <string name="account_login_overdue_title">Your Account Has Expired</string>
    <string name="account_login_phone">Mobile</string>
    <string name="account_login_success">Login successfully</string>
    <string name="account_login_text">Log in</string>
    <string name="account_modify_password">Change Password</string>
    <string name="account_new_pwd_no_change">Your password can\'t be the same as your prior password. Please create a different password.</string>
    <string name="account_nickname_cannot_contain_emoji">Nickname must not contain an emotion icon</string>
    <string name="account_nickname_rename_fail">Username change didn\'t take. Please try again.</string>
    <string name="account_nickname_rename_hint">Enter your username</string>
    <string name="account_nickname_rename_success">Username changed</string>
    <string name="account_nickname_rename_title">Change username</string>
    <string name="account_register_account_address">Account Address</string>
    <string name="account_register_account_address_desc">Please enter mobile or email to create your account, you can recover your password through your contact method.</string>
    <string name="account_register_exist_desc">This account already exists. Would you like to log in to this account?</string>
    <string name="account_register_exist_negative">Cancel</string>
    <string name="account_register_exist_position">Log in</string>
    <string name="account_register_exist_title">The Account Already Exist</string>
    <string name="account_register_nickname_desc">What username would you like? You can use up to 20 letters to create your username.</string>
    <string name="account_register_nickname_hint">Username</string>
    <string name="account_register_nickname_question">Create username</string>
    <string name="account_register_password_desc">Please enter between 6 and 20 characters as your password. You can use uppercase and lowercase letters, numbers, as well as the following symbols: ! # $ % &amp; \' “ * + - / \ = ? ^ _ ` | &lt; &gt; { } [ ] ( ) ~ · , . : ; @ € £ ¥.</string>
    <string name="account_register_password_title">Set Your Password</string>
    <string name="account_register_register_code_sand_fail">Failed to send verification code. Please try again.</string>
    <string name="account_register_success">Register successfully</string>
    <string name="account_register_use_email">Use email</string>
    <string name="account_register_use_phone">Use mobile</string>
    <string name="account_register_verify">Account Verification</string>
    <string name="account_register_verify_code_incorrect">This code is incorrect. Please try again.</string>
    <string name="account_register_verify_desc">For your account security, please enter the 4-digit verification code we have sent to your mobile number or email address: \n%s</string>
    <string name="account_register_verify_hint">Verification code</string>
    <string name="account_register_verify_send">Resend</string>
    <string name="account_reset_password_account_not_exist">Account is not registered</string>
    <string name="account_reset_password_desc">Please enter your mobile number or email address. We\'ll send you a code you can use to recover your password.</string>
    <string name="account_reset_password_fail">Failed to change password</string>
    <string name="account_reset_password_success">Password has been changed</string>
    <string name="account_reset_password_title">Reset Password</string>
    <string name="account_verify_send_limit_hour">You can only send five messages per hour to the same account. Please wait and try again.</string>
    <string name="account_verify_send_limit_minute">You can only send one message per minute to the same account. Please wait and try again.</string>
    <string name="ai_developing">More interesting curriculum coming for you!</string>
    <string name="app_name">uKit EDU</string>
    <string name="app_upgradle_desc">There\'s a new version (%s) of the uKit app! Visit the app store to update and get even more out of your uKit. </string>
    <string name="app_upgradle_title">New Version Released</string>
    <string name="audio_list_empty">You have not record any files, tap \"Record\" to start recording.</string>
    <string name="audio_list_negative">Close</string>
    <string name="audio_list_new">New recording</string>
    <string name="audio_list_title">My Recording</string>
    <string name="audio_record_duration_max" translatable="false">/00:15</string>
    <string name="audio_record_negative">Cancel</string>
    <string name="audio_record_positive">Complete</string>
    <string name="audio_record_start">Record</string>
    <string name="audio_record_template_name">Recording</string>
    <string name="audio_record_title">My Recording</string>
    <string name="audio_record_success">The recording success</string>
    <string name="audio_rename_duplicate_name">The name already exists</string>
    <string name="audio_rename_hint">Please name the recording file</string>
    <string name="audio_rename_title">Rename</string>
    <string name="audio_save_hint">Please name the recording file</string>
    <string name="audio_save_negative">Cancel</string>
    <string name="audio_save_positive">OK</string>
    <string name="audio_save_title">Save Recording</string>
    <string name="blockly_anglefeedback_error_msg">Component abnormal termination</string>
    <string name="bluetooth_angle_anomaly_msg">The angle of %s servo is out of range. Please adjust angle to a figure between –118° and 118°.</string>
    <string name="bluetooth_angle_anomaly_title">Abnormal Angle</string>
    <string name="bluetooth_charging_protection_msg">The device cannot be controlled while charging. You can cancel the restriction in menu settings.</string>
    <string name="bluetooth_charging_protection_title">Charging Protection</string>
    <string name="bluetooth_connect_abnormal_msg">Please check the component, plug it in again to the main control box, and then reconnect to Bluetooth</string>
    <string name="bluetooth_connect_abnormal_title">Abnormal Component Termination</string>
    <string name="bluetooth_connect_confirm_btn">OK</string>
    <string name="bluetooth_connect_conflict_msg">Component ID is overlapping. Please remove the duplicate component and then refresh the component list.</string>
    <string name="bluetooth_connect_conflict_title">Component ID Overlapping</string>
    <string name="bluetooth_connect_disconnect_btn">Disconnect</string>
    <string name="bluetooth_connect_failure">Connection Failed</string>
    <string name="bluetooth_connect_failure_btn_text">OK</string>
    <string name="bluetooth_connect_failure_msg">Failed to connect to main control box. Please make sure the main control box is turned on and try again.</string>
    <string name="bluetooth_connect_motherboard">Main Control Box</string>
    <string name="gdpr_age_guardian_desc">Please find a parent, guardian, or teacher to help you complete the registration process</string>
    <string name="gdpr_age_guardian_negative">I will register later</string>
    <string name="gdpr_age_guardian_position">I found my guardian</string>
    <string name="gdpr_age_guardian_title">Please ask for your guardian\'s help</string>
    <string name="menu_tab_about">About</string>
    <string name="menu_tab_about_contract_us_america">United States and Canada:</string>
    <string name="menu_tab_about_contract_us_america_value" translatable="false">1-800-276-6137  education.service@ubtrobot.com</string>
    <string name="menu_tab_about_contract_us_cn">Mainland China:</string>
    <string name="menu_tab_about_contract_us_cn_other">Hong Kong, Taiwan, Macao, and other regions:</string>
    <string name="menu_tab_about_contract_us_cn_other_value" translatable="false">aftersales@ubtrobot.com</string>
    <string name="menu_tab_about_contract_us_cn_value" translatable="false">400-666-6700  ucare@ubtrobot.com</string>
    <string name="menu_tab_about_contract_us_title">Contact Information</string>
    <string name="menu_tab_account">Account</string>
    <string name="menu_tab_feedback">Feedback</string>
    <string name="menu_tab_help">Help</string>
    <string name="menu_tab_language">Region</string>
    <string name="menu_tab_settings">Settings</string>
    <string name="menu_title">Menu</string>
    <string name="permission_cancel">Quit</string>
    <string name="project_controller_setting_done_btn">OK</string>
    <string name="project_peripheral_error_cancel">Cancel</string>
    <string name="project_peripheral_error_fix">Fix</string>
    <string name="project_peripheral_error_title">Abnormal Component Termination</string>
    <string name="menu_tab_device">Model</string>
</resources>