<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialog_fragment_root_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#99000000">

    <LinearLayout
        android:id="@+id/contract_us_text_area"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/ubt_dimen_240px"
        android:layout_marginTop="@dimen/ubt_dimen_84px"
        android:layout_marginEnd="@dimen/ubt_dimen_240px"
        android:layout_marginBottom="@dimen/ubt_dimen_84px"
        android:background="@drawable/shape_dialog_normal_bg"
        android:clickable="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/ubt_dimen_52px"
            android:text="@string/menu_tab_about_contract_us_title"
            android:textColor="#171E2B"
            android:textSize="@dimen/ubt_font_52px"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/ubt_dimen_220px"
            android:layout_marginTop="@dimen/ubt_dimen_34px"
            android:text="@string/menu_tab_about_contract_us_cn"
            android:textColor="#171E2B"
            android:textSize="@dimen/ubt_font_46px"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/ubt_dimen_220px"
            android:layout_marginTop="@dimen/ubt_dimen_10px"
            android:text="@string/menu_tab_about_contract_us_cn_value"
            android:textColor="#25002B"
            android:textIsSelectable="true"
            android:textSize="@dimen/ubt_font_40px" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/ubt_dimen_220px"
            android:layout_marginTop="@dimen/ubt_dimen_52px"
            android:text="@string/menu_tab_about_contract_us_america"
            android:textColor="#171E2B"
            android:textSize="@dimen/ubt_font_46px"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/ubt_dimen_220px"
            android:layout_marginTop="@dimen/ubt_dimen_10px"
            android:text="@string/menu_tab_about_contract_us_america_value"
            android:textColor="#25002B"
            android:textIsSelectable="true"
            android:textSize="@dimen/ubt_font_40px" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/ubt_dimen_220px"
            android:layout_marginTop="@dimen/ubt_dimen_52px"
            android:text="@string/menu_tab_about_contract_us_cn_other"
            android:textColor="#171E2B"
            android:textSize="@dimen/ubt_font_46px"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/ubt_dimen_220px"
            android:layout_marginTop="@dimen/ubt_dimen_10px"
            android:text="@string/menu_tab_about_contract_us_cn_other_value"
            android:textColor="#25002B"
            android:textIsSelectable="true"
            android:textSize="@dimen/ubt_font_40px" />


    </LinearLayout>

    <Button
        android:id="@+id/menu_about_contract_us_close_btn"
        android:layout_width="@dimen/ubt_dimen_518px"
        android:layout_height="@dimen/ubt_dimen_150px"
        android:layout_alignBottom="@+id/contract_us_text_area"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/ubt_dimen_100px"
        android:layout_marginBottom="@dimen/ubt_dimen_52px"
        android:background="@drawable/selector_prompt_negative_btn"
        android:gravity="center"
        android:text="@string/permission_cancel"
        android:textColor="@android:color/white"
        android:textSize="@dimen/ubt_font_46px"

        android:textStyle="bold" />


</RelativeLayout>