<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/gdpr_age_ask_lyt"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EDEFF2"
    android:orientation="vertical"
    android:visibility="visible">

    <TextView
        android:id="@+id/gdpr_age_title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/ubt_dimen_346px"
        android:layout_marginTop="@dimen/ubt_dimen_218px"
        android:text="@string/gdpr_age_guardian_title"
        android:textColor="#171E2B"
        android:textSize="@dimen/ubt_font_70px"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/gdpr_age_desc_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/ubt_dimen_346px"
        android:layout_marginTop="@dimen/ubt_dimen_22px"
        android:text="@string/gdpr_age_guardian_desc"
        android:textColor="#555B67"
        android:textSize="@dimen/ubt_font_34px" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/ubt_dimen_346px"
        android:layout_marginTop="@dimen/ubt_dimen_100px"
        android:orientation="horizontal">

        <Button
            android:id="@+id/gdpr_age_negative_btn"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/ubt_dimen_150px"
            android:layout_marginEnd="@dimen/ubt_dimen_8px"
            android:background="@drawable/selector_gdpr_age_negative_btn"
            android:minWidth="@dimen/ubt_dimen_540px"
            android:paddingStart="@dimen/ubt_dimen_60px"
            android:paddingEnd="@dimen/ubt_dimen_60px"
            android:text="@string/gdpr_age_guardian_negative"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/ubt_font_46px"
            android:textStyle="bold" />

        <Button
            android:id="@+id/gdpr_age_position_btn"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/ubt_dimen_150px"
            android:background="@drawable/selector_gdpr_age_position_btn"
            android:minWidth="@dimen/ubt_dimen_540px"
            android:paddingStart="@dimen/ubt_dimen_60px"
            android:paddingEnd="@dimen/ubt_dimen_60px"
            android:text="@string/gdpr_age_guardian_position"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/ubt_font_46px"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>

