<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialog_fragment_root_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#99000000">

    <RelativeLayout
        android:layout_width="@dimen/ubt_dimen_1440px"
        android:layout_height="@dimen/ubt_dimen_910px"
        android:layout_centerInParent="true"
        android:background="@drawable/shape_dialog_normal_bg"
        android:clickable="true">

        <TextView
            android:id="@+id/peripheral_error_list_title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/ubt_dimen_58px"
            android:text="@string/project_peripheral_error_title"
            android:textColor="#171E2B"
            android:textSize="@dimen/ubt_font_52px"
            android:textStyle="bold" />

        <Button
            android:id="@+id/peripheral_error_list_close_btn"
            android:layout_width="@dimen/ubt_dimen_540px"
            android:layout_height="@dimen/ubt_dimen_150px"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/ubt_dimen_48px"
            android:background="@drawable/selector_peripheral_error_positive_btn"
            android:text="@string/permission_cancel"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="@dimen/ubt_font_46px"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/peripheral_error_list_btn_area"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/ubt_dimen_150px"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/ubt_dimen_48px"
            android:orientation="horizontal">

            <Button
                android:id="@+id/peripheral_error_list_cancel_btn"
                android:layout_width="@dimen/ubt_dimen_540px"
                android:layout_height="match_parent"
                android:background="@drawable/selector_peripheral_error_negative_btn"
                android:text="@string/project_peripheral_error_cancel"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="@dimen/ubt_font_46px"
                android:visibility="visible" />

            <FrameLayout
                android:layout_width="@dimen/ubt_dimen_540px"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/peripheral_error_list_fix_btn"
                    android:layout_width="@dimen/ubt_dimen_540px"
                    android:layout_height="match_parent"
                    android:background="@drawable/selector_peripheral_error_positive_btn"
                    android:text="@string/project_peripheral_error_fix"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/ubt_font_46px" />

                <Button
                    android:id="@+id/peripheral_error_list_confirm_btn"
                    android:layout_width="@dimen/ubt_dimen_540px"
                    android:layout_height="match_parent"
                    android:background="@drawable/selector_peripheral_error_positive_btn"
                    android:text="@string/project_controller_setting_done_btn"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/ubt_font_46px"
                    android:visibility="gone" />
            </FrameLayout>
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/peripheral_error_list_rcv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/peripheral_error_list_btn_area"
            android:layout_below="@id/peripheral_error_list_title_tv"
            android:layout_marginStart="@dimen/ubt_dimen_90px"
            android:layout_marginTop="@dimen/ubt_dimen_50px"
            android:layout_marginEnd="@dimen/ubt_dimen_90px"
            android:layout_marginBottom="@dimen/ubt_dimen_23px" />

    </RelativeLayout>
</RelativeLayout>